Closed
Bug 380116
Opened 18 years ago
Closed 18 years ago
[FIX]"Wrong parent style context" involving table { display: block } and <select>
Categories
(Core :: Layout, defect, P2)
Tracking
()
RESOLVED
FIXED
mozilla1.9alpha6
People
(Reporter: jruderman, Assigned: bzbarsky)
References
Details
(Keywords: testcase)
Attachments
(2 files)
231 bytes,
application/xhtml+xml
|
Details | |
2.49 KB,
patch
|
dbaron
:
review+
dbaron
:
superreview+
|
Details | Diff | Splinter Review |
Loading the testcase in a debug build causes this console output:
frame: Text(-1) (0x3f39cd58) style: 0x3f26c9d8 :-moz-non-element {}
Wrong parent style context: style: 0x3f26caf8 :-moz-display-comboboxcontrol-frame {}
should be using: style: 0x3f18aa98 {}
frame: Text(-1) (0x3f18b1c0) style: 0x3f1a1fb4 :-moz-non-element {}
Wrong parent style context: style: 0x3f1a1d08 :-moz-button-content {}
should be using: style: 0x3f18ade4 {}
![]() |
Assignee | |
Comment 1•18 years ago
|
||
Assignee: nobody → bzbarsky
Status: NEW → ASSIGNED
Attachment #264217 -
Flags: superreview?(dbaron)
Attachment #264217 -
Flags: review?(dbaron)
![]() |
Assignee | |
Comment 2•18 years ago
|
||
Not sure how to test this...
Flags: in-testsuite?
Priority: -- → P2
Summary: "Wrong parent style context" involving table { display: block } and <select> → [FIX]"Wrong parent style context" involving table { display: block } and <select>
Target Milestone: --- → mozilla1.9alpha5
Reporter | ||
Comment 3•18 years ago
|
||
Toss it in a random test suite and make "wrong parent style context" an assertion? ;)
![]() |
Assignee | |
Comment 4•18 years ago
|
||
That might work...
![]() |
Assignee | |
Updated•18 years ago
|
Target Milestone: mozilla1.9alpha5 → mozilla1.9alpha6
Comment on attachment 264217 [details] [diff] [review]
Use the same style context parents as a reresolve will pick up
Rubber-stamp r+sr=dbaron
Attachment #264217 -
Flags: superreview?(dbaron)
Attachment #264217 -
Flags: superreview+
Attachment #264217 -
Flags: review?(dbaron)
Attachment #264217 -
Flags: review+
![]() |
Assignee | |
Comment 6•18 years ago
|
||
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Reporter | ||
Comment 7•18 years ago
|
||
Crashtest checked in. "Wrong parent style context" is now an assertion, so once assertions turn Tinderbox orange, this will be properly regression-tested.
Flags: in-testsuite? → in-testsuite+
You need to log in
before you can comment on or make changes to this bug.
Description
•