Fix parent style context warnings by being consistent about parent contexts. Bug 380116, r+sr=dbaron